Downgraded jdk 23 to 17 and updated corresponding CI/CD script